--- a/style.css
+++ b/style.css
@@ -12,11 +12,11 @@ span{
     color: white;
 }
 table, th, td {
-    border:1px solid black;
+    border: 8px solid transparent ;
   }
 img{
-    height: 40px;
-    width: 40px;
+    height: 80px;
+    width: 80px;
     max-width: 120px;
 }
 .dropbtn {
@@ -29,6 +29,7 @@ img{
   .dropdown {
     position: relative;
     display: inline-block;
+    padding: 15px 32px;
   }
   
   .dropdown-content {
@@ -47,3 +48,24 @@ img{
   }
     
   .show {display: block;}
+
+  .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+
+  }
+
+  button{
+    background-color: black;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  .center-table{
+      margin-left: auto;
+      margin-right: auto;
+  }
